# P2P-TV

./: .env.example  .gitignore  Dockerfile.hub  Dockerfile.node  README.md  docker-compose.yml  pyproject.toml  setup_linux.sh
data/: channels.json
data/schedules/: channel-1.json  channel-crt.json
p2ptv_hub/: __init__.py  auth.py  config.py  main.py  models.py  requirements.txt  store.py
p2ptv_hub/routers/: channels.py  content.py  health.py  schedule.py
p2ptv_node/: __init__.py  cache_manager.py  config.py  hub_client.py  main.py  prefetcher.py  qbt_client.py  requirements.txt
tests/: conftest.py  test_channels.py  test_content.py  test_health.py  test_schedule.py
tools/: add_content.py  play_channel.py  refresh_sample_schedules.py
